- fixed z-index bug - worked with banners

--- a/src/components/layout/common/header/Header.module.scss
+++ b/src/components/layout/common/header/Header.module.scss
@@ -59,7 +59,7 @@
       position: fixed;
       right: 30px;
       cursor: pointer;
-      z-index: 1001;
+      z-index: 50;
     }
 
     &__burgerLine {
@@ -84,7 +84,7 @@
       transition: left 0.3s ease-in-out;
       background-color: rgba(255, 255, 255, 0.7);
       backdrop-filter: blur(10px);
-      z-index: 1000;
+      z-index: 49;
       padding-top: 100px;
 
       &__list {
