--- a/src/components/layout/ui/card/Card.module.scss
+++ b/src/components/layout/ui/card/Card.module.scss
@@ -1,6 +1,6 @@
 .card {
   position: relative;
-  z-index: 5;
+  z-index: 10;
   background-color: var(--white-text);
   max-width: 580px;
   padding: 35px 50px;
